=head1 Krang Changelog

This document contains a list of changes for each release of Krang.




=head2 3.01? - KRANG_TEG BRANCH

=over

=item *

Implemented first version of auto-slug-generation based on title
and story type. [Noam Weinstein]

=item *

Made 'New Story' & 'Add Category' dialogues remember the last 
category chosen during current session. [Noam Weinstein] 

=item *

Made 'Save' buttons in element editor truly save to disk even
when editing a container, and replaced old non-disk save with 
a 'Done' button. [Noam Weinstein]

=head2 3.00 - IN DEVELOPMENT

=over

=item *

Fixed addon v2 compat bugs in some test files. [Bodo Schulze]

=item *

Get C<bin/krang_install> ready for use with MySQL 5.* [Bodo Schulze]

=item * 

Added C<--all-instances> flag to F<bin/krang_publish> to work with 
C<--everything>. [Michael Peters]

=item *

Fix ordering of media types on media UI to be in alphabetical
order. [Eric Folley]

=item *

Completely new skin. [Don Brodale, Michael Peters and Eric Folley]

=item *

New AJAX interface and Javascript re-write. [Michael Peters]

=item *

Added a new forgot-password functionality to the login screen. 
[Michael Peters]

=item *

Added the C<EnableFTP> config directive which is true after an
upgrade. [Michael Peters]

=item *

Added the C<Secret> config directive to be used for encryption and
encoding. [Michael Peters, Bodo Schulze]

=item *

Added the C<ContactEmail> and C<ContactURL> config directives to be used in
links in the footer. [Michael Peters]

=item *

Added the C<CustomCSS> config directive which allows each instance to change
the CSS for the CMS. Most commonly this can be used to add specific logo
images per-instance. [Michael Peters]

=item *

Fixed bug #10. Extended Skins configuration by allowing an arbitrary list
of CSS colors that will be put into an arbitrary number of F<.css.tmpl>
files.  [Michael Peters]

=item *

Fixed bug #3. C<< $publisher->publish_context >> now does not die if called without data.