@@ -385,7 +385,7 @@ Lists
   <a href="javascript:do_move(<tmpl_var escape=html list_count>,1)"><img alt="" src="images/arrow-desc.gif"></a>
   <br>
   <input name="new_item_<tmpl_var escape=html list_count>">
-  <input value="Add List Group" onclick="do_add(<tmpl_var escape=html list_count>)" type="button" class="button">
+  <input value="Add Item" onclick="do_add(<tmpl_var escape=html list_count>)" type="button" class="button">
   <input value="Replace" onclick="do_replace(<tmpl_var escape=html list_count>)" type="button" class="button">
   <input value="Delete" onclick="do_delete(<tmpl_var escape=html list_count>)" type="button" class="button">
   </td>
